Added the logstash paths related information

--- a/logstash.conf
+++ b/logstash.conf
@@ -1,7 +1,7 @@
 input {
     stdin {}
     file {
-    path => "pp/fyers_notification/*_log.log"
+    path => "/pp/fyers_notification/*_log.log"
     start_position => "beginning"
     sincedb_path => "/dev/null"
   }
