--- a/fys_notification/Procfile
+++ b/fys_notification/Procfile
@@ -1,1 +1,1 @@
-web: gunicorn fys_notification.run:flask_app --log-file -
+web: gunicorn 'fys_notification.run:create_app()' --preload -b 0.0.0.0:5000 --log-file -
